IJMP-1522 Fixes for tests
Signed-off-by: Katsiaryna Tsytsenia <KTsytsenia@ibagroup.eu>